# pyproject.toml

[project]
name = "micropython_esp32_lib"
version = "0.1.1"
authors = [
    {name = "HRChen", email = "tn918419@gmail.com"},
]
description = "A custom utility library for MicroPython on ESP32, focusing on System and Network functionalities."
readme = "Readme.md"
keywords = ["micropython", "esp32"]
requires-python = ">=3.11.9"
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: Implementation :: MicroPython",
    "Operating System :: Microcontroller",
    "Topic :: Software Development :: Embedded Systems",
]
dependencies = [
    # "abc==0.1.0", 
    # "inspect==0.2.0",
    # "dht==0.1.0", 
    # "ssd1306==0.1.0"
]

[project.optional-dependencies]
dev = [
    # "micropython-esp32-stubs",
    # "typing-extensions",
    # "pytest", 
]

[build-system]
requires = ["uv_build"]
build-backend = "uv_build"
